Revert dockerization, update webhook IP, and update README

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=8081
+server.port=${SERVER_PORT:8081}
 spring.application.name=igsm-chatbot
 
 # Evolution API Config
-evolution.api.url=http://localhost:8080
-evolution.api.instance=diplos
-evolution.api.key=api_key
+evolution.api.url=${EVOLUTION_API_URL:http://localhost:8080}
+evolution.api.instance=${EVOLUTION_API_INSTANCE:diplos}
+evolution.api.key=${AUTHENTICATION_API_KEY:api_key}
