--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   evolution_api:
-    container_name: evolution_api
+    container_name: igsm_evolution_api
     image: evoapicloud/evolution-api:latest
     restart: always
     depends_on:
@@ -25,7 +25,7 @@ services:
     restart: always
     networks:
       - evolution-net
-    container_name: redis
+    container_name: igsm_redis
     command: >
       redis-server --port 6379 --appendonly yes
     volumes:
@@ -35,7 +35,7 @@ services:
 
 
   postgres:
-    container_name: postgres
+    container_name: igsm_postgres
     image: postgres:15
     networks:
       - evolution-net
