--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   evolution_api:
     container_name: igsm-evolution-api-v2
-    image: evoapicloud/evolution-api:v2.2.2
+    image: evoapicloud/evolution-api:latest
     restart: always
     depends_on:
       - redis
